# security-cam-team-404

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  idf_component.yml  main.c
software/: app.py  bytetrack_custom.yaml  data.yaml  mqtt1.py  mqtt2.py
